# YavuzOrenim

./: CMakeLists.txt  build.bat  car.cpp  main.cpp  road.hpp
outsrc/: CMakeLists.txt
src/: CMakeLists.txt  Includes.hpp  car.hpp  core.cpp  core.hpp  road.cpp  road.hpp
